--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -9,6 +9,8 @@
     width: 2.5rem;
     height: 2.5rem;
     margin-right: 1.5rem;
+    fill: $color-primary-dark;
+
   }
 
   p {
